; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/talljoe/extr_tapdance.c_tap_dance_semicolon_reset.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/talljoe/extr_tapdance.c_tap_dance_semicolon_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@tap_state = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@KC_SCLN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c";;\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c";\0A\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c";\0A\0A\00", align 1
@_NUM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tap_dance_semicolon_reset(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tap_state, i32 0, i32 0), align 4
  switch i32 %5, label %25 [
    i32 130, label %6
    i32 133, label %6
    i32 132, label %9
    i32 128, label %17
    i32 129, label %19
    i32 131, label %22
  ]

6:                                                ; preds = %2, %2
  %7 = load i32, i32* @KC_SCLN, align 4
  %8 = call i32 @unregister_code(i32 %7)
  br label %25

9:                                                ; preds = %2
  %10 = call i32 (...) @get_mods()
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %9
  %13 = call i32 @SEND_STRING(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  br label %16

14:                                               ; preds = %9
  %15 = call i32 @SEND_STRING(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  br label %16

16:                                               ; preds = %14, %12
  br label %25

17:                                               ; preds = %2
  %18 = call i32 @SEND_STRING(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  br label %19

19:                                               ; preds = %2, %17
  %20 = load i32, i32* @_NUM, align 4
  %21 = call i32 @layer_invert(i32 %20)
  br label %25

22:                                               ; preds = %2
  %23 = load i32, i32* @_NUM, align 4
  %24 = call i32 @layer_off(i32 %23)
  br label %25

25:                                               ; preds = %2, %22, %19, %16, %6
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tap_state, i32 0, i32 0), align 4
  ret void
}

declare dso_local i32 @unregister_code(i32) #1

declare dso_local i32 @get_mods(...) #1

declare dso_local i32 @SEND_STRING(i8*) #1

declare dso_local i32 @layer_invert(i32) #1

declare dso_local i32 @layer_off(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
